# rag-arcabot

./: .env  .gitignore  README.md  docker-compose.yml
arcabot_chromadb/: Dockerfile  pyproject.toml
arcabot_chromadb/src/: main.py
arcabot_chromadb/src/utils/: __init__.py
arcabot_fastapi/: Dockerfile  pyproject.toml
arcabot_fastapi/src/: entrypoint.sh  main.py
arcabot_fastapi/src/chains/: custom_pdfquery_chain.py  generic_pdfquery_chain.py  jobarch_pdfquery_chain.py  jobcourier_pdfquery_chain.py  ngage_pdfquery_chain.py  pdfquery_chain.py  talentum_pdfquery_chain.py
arcabot_fastapi/src/models/: __init__.py  query.py
arcabot_fastapi/src/utils/: async_utils.py  auth_utils.py
arcabot_streamlit/: Dockerfile  pyproject.toml
arcabot_streamlit/src/: main.py
arcabot_streamlit/src/components/: chat.py  intro.py  sidebar.py
arcabot_streamlit/src/software/: jobarch.py  jobcourier.py  ngage.py  talentum.py
arcabot_streamlit/src/template/: common.py
arcabot_streamlit/src/utils/: __init__.py  functions.py  session_manager.py
