[project]
name = "arcabot_fastapi"
version = "0.1"
dependencies = [
    "aiofiles==24.1.0",
    "chromadb==0.6.3",
    "asyncio==3.4.3",
    "cassio==0.1.10",
    "fastapi==0.115.12",
    "langchain==0.3.21",
    "langchainhub==0.1.21",
    "langchain-chroma==0.2.2",
    "langchain-community==0.3.20",
    "langchain-openai==0.3.11",
    "openai==1.68.2",
    "pydantic==2.10.6",
    "PyJWT==2.10.1",
    "python-multipart==0.0.20",
    "pypdf==5.4.0",
    "redis==5.2.1",
    "uvicorn==0.34.0"
]

[project.optional-dependencies]
dev = ["black", "flake8"]